--- a/public/css/home.css
+++ b/public/css/home.css
@@ -105,8 +105,8 @@ nav {
 
 @media screen and (max-width: 768px) {
     nav {
-        top: 5px;
-        left: 0;
+        top: 3px;
+        left: 3px;
         padding: 5px 10px;
         transform: none;
     }
@@ -120,7 +120,7 @@ nav {
         width: 30%;
         background: rgba(255, 255, 255, 0.9);
         padding: 10px 10px;
-        border-radius: 8px;
+        border-radius: 4px;
         gap: 10px;
     }
 
@@ -142,8 +142,8 @@ nav {
 }
 @media screen and (max-width: 360px) {
     nav {
-        top: 5px;
-        left: 0;
+        top: 3px;
+        left: 3px;
         padding: 8px 15px;
         transform: none;
     }
@@ -158,7 +158,7 @@ nav {
         background: rgba(255, 255, 255, 0.95);
         padding: 10px 5px;
         gap: 8px;
-        border-radius: 8px;
+        border-radius: 4px;
     }
 
     .nav-item a {
