--- a/public/css/project.css
+++ b/public/css/project.css
@@ -105,8 +105,8 @@ nav {
 
 @media screen and (max-width: 768px) {
     nav {
-        top: 0;
-        left: 0;
+        top: 3px;
+        left: 3px;
         padding: 5px 10px;
         transform: none;
     }
@@ -120,7 +120,7 @@ nav {
         width: 30%;
         background: rgba(255, 255, 255, 0.9);
         padding: 10px 10px;
-        border-radius: 8px;
+        border-radius: 4px;
         gap: 10px;
         text-align: start;
     }
@@ -143,8 +143,8 @@ nav {
 }
 @media screen and (max-width: 360px) {
     nav {
-        top: 0;
-        left: 0;
+        top: 3px;
+        left: 3px;
         padding: 8px 15px;
         transform: none;
     }
@@ -159,7 +159,7 @@ nav {
         background: rgba(255, 255, 255, 0.95);
         padding: 10px 5px;
         gap: 8px;
-        border-radius: 8px;
+        border-radius: 4px;
     }
 
     .nav-item a {
@@ -221,16 +221,19 @@ Contacts
         margin: 0;
         position: fixed;
         left: 50%;
-        top: calc(1% - 3px);
-        transform: translateX(-50%);
+        top: 5px; 
+        transform: translateX(-50%); 
         z-index: 99999;
-        padding: 8px 20px; 
+        padding: 8px 20px;
     }
-    .contacts-item{
+    
+    .contacts-item {
         display: flex;
         flex-direction: row;
         gap: 15px;
+        align-items: center;
     }
+
     .contacts-item a{
         margin: 0;
         text-decoration: none;
@@ -242,16 +245,16 @@ Contacts
         margin: 0;
         position: fixed;
         left: 50%;
-        top: calc(1% - 3px);
-        transform: translateX(-50%);
+        top: 5px; 
+        transform: translateX(-50%); 
         z-index: 99999;
-        padding: 5px 15px; 
+        padding: 8px 20px;
     }
-
+    
     .contacts-item {
         display: flex;
-        flex-direction: row; 
-        gap: 10px; 
+        flex-direction: row;
+        gap: 15px;
         align-items: center;
     }
 
