--- a/public/css/home.css
+++ b/public/css/home.css
@@ -121,7 +121,7 @@ nav {
         left: 0;
         width: 30%;
         background: rgba(255, 255, 255, 0.9);
-        padding: 10px 10px;
+        padding: 10px 5px;
         border-radius: 4px;
         gap: 10px;
         text-align: start;
@@ -147,7 +147,7 @@ nav {
     nav {
         top: 3px;
         left: 3px;
-        padding: 8px 15px;
+        padding: 5px 10px;
         transform: none;
     }
 
@@ -167,7 +167,7 @@ nav {
     .nav-item a {
         color: var(--bg-color);
         text-align: start;
-        padding: 8px;
+        padding: 5px;
         font-size: 14px;
         width: 100%;
     }
@@ -224,7 +224,7 @@ Contacts
         position: fixed;
         left: 50%;
         top: 5px; 
-        transform: translateX(-50%); 
+        transform: translate(-50%); 
         z-index: 99999;
         padding: 8px 20px;
     }
@@ -248,7 +248,7 @@ Contacts
         position: fixed;
         left: 50%;
         top: 5px; 
-        transform: translateX(-50%); 
+        transform: translate(-50%); 
         z-index: 99999;
         padding: 8px 20px;
     }
